# src/models/employee.model.ts
@@ -1,0 +1,7 @@
+export interface Employee {
+  id: number;
+  firstName: string;
+  lastName: string;
+  date_of_birth: Date;
+  secret: string;
+}
